新增HttpClient模块